--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "scaffolding",
         "workflow"
     ],
-    "author": "NetPad Team",
+    "author": "Michael Lynn <merlynn@gmail.com>",
     "license": "MIT",
     "dependencies": {
         "chalk": "^4.1.2",
