--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "commands/",
         "lib/",
         "templates/",
-        "README.md",
+        "README.md"
     ],
     "keywords": [
         "netpad",
