--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "chalk": "^4.1.2",
         "commander": "^11.0.0",
         "inquirer": "^9.0.0",
+        "netpad-cli": "^0.6.0",
         "open": "^10.1.2"
     },
     "jest": {
